issue distorting navbar in safari browser

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -11,7 +11,7 @@
     animation-name: button-pulsate;
     animation-duration: 2s;
     animation-iteration-count: infinite;
-    align-self: end;
+    align-self: flex-end;
   }
 }
 
@@ -24,7 +24,7 @@
     animation-name: button-pulsate;
     animation-duration: 2s;
     animation-iteration-count: infinite;
-    align-self: end;
+    align-self: flex-end;
     font-size: 1rem;
   }
 }
