--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -79,7 +79,7 @@
   .navbar-input-naira-symbol {
     font-size: 3rem;
     margin-right: 5px;
-    align-self: end;
+    align-self: flex-end;
   }
 }
 
@@ -87,7 +87,7 @@
   .navbar-input-naira-symbol {
     font-size: 2.5rem;
     margin-right: 1px;
-    align-self: end;
+    align-self: flex-end;
   }
 }
 
